--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <li> <img src="icons/logo.svg">
                 <h1> csmc </h1>
             </li>
-            <li> &Uuml;ber Uns </li>
+            <li> <nobr>&Uuml;ber Uns</nobr> </li>
             <li> Portfolio </li>
             <li> Kontakt </li>
         </ul>
