--- a/index.html
+++ b/index.html
@@ -16,12 +16,23 @@
             <li> Kontakt </li>
         </ul>
     </div>
-    <div id="content">
-        <img src="bilder/schilf.jpg">
+    <!--<div id="content">
+        <img src="bilder/schuessel.jpg">
         <img src="bilder/sonnenuntergang.jpg">
         <img src="bilder/schilf.jpg">
+    </div>-->
+    <div id="kontakt">
+        <img src="bilder/schuessel2.jpg">
+        <form action="index.html" method="post">
+            <h1> Benötigen Sie Unsere Kenntnisse? Fragen? Kritik?</h1>
+            <h1> Schreiben Sie Uns einfach.</h1>
+
+            <input placeholder="E-Mail" type="email" id="email" name="user_email">
+            <textarea placeholder="Ihre Nachricht" name="user_text"></textarea>
+            <button type="submit">Abschicken</button>
+        </form>
     </div>
-    <img id="globus" src="icons/globe.svg">
+
 
 </body>
 
