portfolio seite - erster versuch
noch nicht responsive/ der link wird noch eingeblendet wenn man über das
bild geht

--- a/index.html
+++ b/index.html
@@ -15,24 +15,49 @@
             <li> Portfolio </li>
             <li> Kontakt </li>
         </ul>
+        <p> Impressum </p>
     </div>
     <!--<div id="content">
         <img src="bilder/schuessel.jpg">
         <img src="bilder/sonnenuntergang.jpg">
         <img src="bilder/schilf.jpg">
     </div>-->
-    <div id="kontakt">
+    <!--    <div id="kontakt">
         <img src="bilder/schuessel2.jpg">
         <form action="index.html" method="post">
-            <h1> Benötigen Sie Unsere Kenntnisse? Fragen? Kritik?</h1>
+            <h1> Ben&ouml;tigen Sie Unsere Kenntnisse? Fragen? Kritik?</h1>
             <h1> Schreiben Sie Uns einfach.</h1>
 
             <input placeholder="E-Mail" type="email" id="email" name="user_email">
             <textarea placeholder="Ihre Nachricht" name="user_text"></textarea>
             <button type="submit">Abschicken</button>
         </form>
-    </div>
+    </div>-->
+    <div id="portfolio">
+        <img id="portfolio_hg" src="bilder/portfolio_hintergrund.jpg">
+        <div id="links">
+            <div id="p1">
+                <img src="bilder/p1.jpg">
+            </div>
+            <div id="p2">
+                <img src="bilder/p1.jpg">
+            </div>
+            <div id="p3">
+                <img src="bilder/p1.jpg">
+            </div>
+            <div id="p4">
+                <img src="bilder/p1.jpg">
+            </div>
+            <div id="p4">
+                <img src="bilder/p1.jpg">
+            </div>
+            <div id="p4">
+                <img src="bilder/p1.jpg">
+            </div>
+        </div>
 
+
+    </div>
 
 </body>
 
