--- a/index.html
+++ b/index.html
@@ -11,18 +11,20 @@
             <li> <img src="icons/logo.svg">
                 <h1> csmc </h1>
             </li>
-            <li> &Uuml;ber Uns </li>
-            <li> Portfolio </li>
-            <li> Kontakt </li>
+            <li id="link1"> &Uuml;ber Uns </li>
+            <li id="link2"> Portfolio </li>
+            <li id="link3"> Kontakt </li>
         </ul>
         <p> Impressum </p>
     </div>
-    <!--<div id="content">
-        <img src="bilder/schuessel.jpg">
-        <img src="bilder/sonnenuntergang.jpg">
+    <div id="content">
+
         <img src="bilder/schilf.jpg">
-    </div>-->
-    <!--    <div id="kontakt">
+        <img src="bilder/sonnenuntergang.jpg">
+        <img src="bilder/schuessel.jpg">
+
+    </div>
+    <div id="kontakt">
         <img src="bilder/schuessel2.jpg">
         <form action="index.html" method="post">
             <h1> Ben&ouml;tigen Sie Unsere Kenntnisse? Fragen? Kritik?</h1>
@@ -32,7 +34,7 @@
             <textarea placeholder="Ihre Nachricht" name="user_text"></textarea>
             <button type="submit">Abschicken</button>
         </form>
-    </div>-->
+    </div>
     <div id="portfolio">
         <img id="portfolio_hg" src="bilder/portfolio_hintergrund.jpg">
         <div id="links">
@@ -58,7 +60,8 @@
 
 
     </div>
-
+    <script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
