--- a/index.html
+++ b/index.html
@@ -17,13 +17,18 @@
         </ul>
         <p> Impressum </p>
     </div>
-    <div id="content">
 
+    <div id="content">
         <img src="bilder/schilf.jpg">
         <img src="bilder/sonnenuntergang.jpg">
         <img src="bilder/schuessel.jpg">
-
     </div>
+
+    <div id="ueberuns">
+        <img id="ueberuns_hg" src="bilder/portfolio_hintergrund.jpg">
+        <img id="logo_hg" src="icons/logo_background.svg">
+    </div>
+
     <div id="kontakt">
         <img src="bilder/schuessel2.jpg">
         <form action="index.html" method="post">
@@ -35,8 +40,9 @@
             <button type="submit">Abschicken</button>
         </form>
     </div>
+
     <div id="portfolio">
-        <img id="portfolio_hg" src="bilder/portfolio_hintergrund.jpg">
+        <img id="portfolio_hg" src="bilder/schilf.jpg">
         <div id="links">
             <div id="p1">
                 <img src="bilder/p1.jpg">
