--- a/index.html
+++ b/index.html
@@ -1,73 +1,77 @@
 <!Doctype html>
 <html>
 
-<head>
-    <link rel="stylesheet" href="style.css">
-</head>
+    <head>
+        <link rel="stylesheet" href="style.css">
+    </head>
 
-<body>
-    <div id="nav">
-        <ul>
-            <li> <img src="icons/logo.svg">
-                <h1> csmc </h1>
-            </li>
-            <li id="link1"> &Uuml;ber Uns </li>
-            <li id="link2"> Portfolio </li>
-            <li id="link3"> Kontakt </li>
-        </ul>
-        <p> Impressum </p>
-    </div>
-
-    <div id="content">
-        <img src="bilder/schilf.jpg">
-        <img src="bilder/sonnenuntergang.jpg">
-        <img src="bilder/schuessel.jpg">
-    </div>
-
-    <div id="ueberuns">
-        <img id="ueberuns_hg" src="bilder/portfolio_hintergrund.jpg">
-        <img id="logo_hg" src="icons/logo_background.svg">
-    </div>
-
-    <div id="kontakt">
-        <img src="bilder/schuessel2.jpg">
-        <form action="index.html" method="post">
-            <h1> Ben&ouml;tigen Sie Unsere Kenntnisse? Fragen? Kritik?</h1>
-            <h1> Schreiben Sie Uns einfach.</h1>
-
-            <input placeholder="E-Mail" type="email" id="email" name="user_email">
-            <textarea placeholder="Ihre Nachricht" name="user_text"></textarea>
-            <button type="submit">Abschicken</button>
-        </form>
-    </div>
-
-    <div id="portfolio">
-        <img id="portfolio_hg" src="bilder/schilf.jpg">
-        <div id="links">
-            <div id="p1">
-                <img src="bilder/p1.jpg">
-            </div>
-            <div id="p2">
-                <img src="bilder/p1.jpg">
-            </div>
-            <div id="p3">
-                <img src="bilder/p1.jpg">
-            </div>
-            <div id="p4">
-                <img src="bilder/p1.jpg">
-            </div>
-            <div id="p4">
-                <img src="bilder/p1.jpg">
-            </div>
-            <div id="p4">
-                <img src="bilder/p1.jpg">
-            </div>
+    <body>
+        <div id="nav">
+            <ul>
+                <li> <img src="icons/logo.svg">
+                    <h1> csmc </h1>
+                </li>
+                <li id="link1"> &Uuml;ber Uns </li>
+                <li id="link2"> Portfolio </li>
+                <li id="link3"> Kontakt </li>
+            </ul>
+            <p> Impressum </p>
         </div>
 
 
-    </div>
-    <script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
-    <script src="script.js"></script>
-</body>
+
+        <div id="content">
+            <div id="home">
+                <img src="bilder/schilf.jpg">
+                <img src="bilder/sonnenuntergang.jpg">
+                <img src="bilder/schuessel.jpg">
+            </div>
+
+            <div id="ueberuns">
+                <img id="hg" src="bilder/portfolio_hintergrund.jpg">
+                <img id="logo_hg" src="icons/logo_background.svg">
+            </div>
+
+            <div id="kontakt">
+                <img id="hg" img src="bilder/schuessel2.jpg">
+                <form action="index.html" method="post">
+                    <h1> Ben&ouml;tigen Sie Unsere Kenntnisse? Fragen? Kritik?</h1>
+                    <h1> Schreiben Sie Uns einfach.</h1>
+
+                    <input placeholder="E-Mail" type="email" id="email" name="user_email">
+                    <textarea placeholder="Ihre Nachricht" name="user_text"></textarea>
+                    <button type="submit">Abschicken</button>
+                </form>
+            </div>
+
+            <div id="portfolio">
+                <img id="hg" src="bilder/schilf.jpg">
+                <div id="links">
+                    <div id="p1">
+                        <img src="bilder/p1.jpg">
+                    </div>
+                    <div id="p2">
+                        <img src="bilder/p1.jpg">
+                    </div>
+                    <div id="p3">
+                        <img src="bilder/p1.jpg">
+                    </div>
+                    <div id="p4">
+                        <img src="bilder/p1.jpg">
+                    </div>
+                    <div id="p4">
+                        <img src="bilder/p1.jpg">
+                    </div>
+                    <div id="p4">
+                        <img src="bilder/p1.jpg">
+                    </div>
+                </div>
+
+
+            </div>
+        </div>
+        <script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
+        <script src="script.js"></script>
+    </body>
 
 </html>
