--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
             </div>
         </div>
-        <script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
+        <script src="jquery-2.1.3.min.js"></script>
         <script src="script.js"></script>
     </body>
 
