Megaaa smooth scroling implementiert

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
                 <li> <img src="icons/logo.svg">
                     <h1> csmc </h1>
                 </li>
-                <li id="link1"> &Uuml;ber Uns </li>
-                <li id="link2"> Portfolio </li>
-                <li id="link3"> Kontakt </li>
+                <li id="link1" onmousedown="scrollToElement($('#ueberuns'));"> &Uuml;ber Uns </li>
+                <li id="link2" onmousedown="scrollToElement($('#portfolio'));"> Portfolio </li>
+                <li id="link3" onmousedown="scrollToElement($('#kontakt'));"> Kontakt </li>
             </ul>
             <p> Impressum </p>
         </div>
