--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <div id="nav">
             <ul>
-                <li> <img src="icons/logo.svg">
+                <li onmousedown="scrollToElement($('#home'));"> <img src="icons/logo.svg">
                     <h1> csmc </h1>
                 </li>
                 <li id="link1" onmousedown="scrollToElement($('#ueberuns'));"> &Uuml;ber Uns </li>
