--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 
 
-        <div id="content">
+        <div id="content" >
             <div id="home">
                 <img src="bilder/schilf.jpg">
                 <img src="bilder/sonnenuntergang.jpg">
@@ -46,6 +46,26 @@
 
             <div id="portfolio">
                 <img id="hg" src="bilder/schilf.jpg">
+                <div id = "showroom" >
+                    <div id="shocase1">
+                        <img src="bilder/p1.jpg">
+                    </div>
+                    <div id="shocase2">
+                        <img src="bilder/p1.jpg">
+                    </div>
+                    <div id="shocase3">
+                        <img src="bilder/p1.jpg">
+                    </div>
+                    <div id="shocase4">
+                        <img src="bilder/p1.jpg">
+                    </div>
+                    <div id="shocase4">
+                        <img src="bilder/p1.jpg">
+                    </div>
+                    <div id="shocase4">
+                        <img src="bilder/p1.jpg">
+                    </div>
+                </div>
                 <div id="links">
                     <div id="p1">
                         <img src="bilder/p1.jpg">
@@ -56,18 +76,11 @@
                     <div id="p3">
                         <img src="bilder/p1.jpg">
                     </div>
-                    <div id="p4">
-                        <img src="bilder/p1.jpg">
-                    </div>
-                    <div id="p4">
-                        <img src="bilder/p1.jpg">
-                    </div>
-                    <div id="p4">
-                        <img src="bilder/p1.jpg">
-                    </div>
                 </div>
-
-
+            </div>
+            <div id="Impressum">
+                <p>  </p>                
+                
             </div>
         </div>
         <script src="jquery-2.1.3.min.js"></script>
