--- a/index.html
+++ b/index.html
@@ -28,24 +28,13 @@
             </div>
 
             <div id="ueberuns">
-                <img id="hg" src="bilder/portfolio_hintergrund.jpg">
+                <div class = "bg">
+                </div>
                 <img id="logo_hg" src="icons/logo_background.svg">
             </div>
-
-            <div id="kontakt">
-                <img id="hg" img src="bilder/schuessel2.jpg">
-                <form action="index.html" method="post">
-                    <h1> Ben&ouml;tigen Sie Unsere Kenntnisse? Fragen? Kritik?</h1>
-                    <h1> Schreiben Sie Uns einfach.</h1>
-
-                    <input placeholder="E-Mail" type="email" id="email" name="user_email">
-                    <textarea placeholder="Ihre Nachricht" name="user_text"></textarea>
-                    <button type="submit">Abschicken</button>
-                </form>
-            </div>
-
             <div id="portfolio">
-                <img id="hg" src="bilder/schilf.jpg">
+                <div class = "bg">
+                </div>
                 <div id = "showroom" >
                     <div id="shocase1">
                         <img src="bilder/p1.jpg">
@@ -77,6 +66,18 @@
                         <img src="bilder/p1.jpg">
                     </div>
                 </div>
+            </div>
+            <div id="kontakt">
+                <div class = "bg">
+                </div>
+                <form action="index.html" method="post">
+                    <h1> Ben&ouml;tigen Sie Unsere Kenntnisse? Fragen? Kritik?</h1>
+                    <h1> Schreiben Sie Uns einfach.</h1>
+
+                    <input placeholder="E-Mail" type="email" id="email" name="user_email">
+                    <textarea placeholder="Ihre Nachricht" name="user_text"></textarea>
+                    <button type="submit">Abschicken</button>
+                </form>
             </div>
             <div id="Impressum">
                 <p>  </p>                
