--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
                 <li id="link2" onmousedown="scrollToElement($('#portfolio'));"> Portfolio </li>
                 <li id="link3" onmousedown="scrollToElement($('#kontakt'));"> Kontakt </li>
             </ul>
-            <p> Impressum </p>
+                        <p> <a href="https://dl.dropboxusercontent.com/u/1471098/loisi.png">Impressum</a>
+ </p>
         </div>
 
 
